--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -9,7 +9,7 @@
         <!-- Advert List Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
-                {% for ad in ad_list %}
+                {% for ad in object_list %}
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
