--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -18,6 +18,8 @@
                             </a>
                             <p class="card-text text-muted h6">{{ ad.created_on}}
                             </p>
+                            <p class="card-text">{{ ad.excerpt }}
+                            </p>
                         </div>
                     </div>
                 </div>
