--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Google Fonts CSS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -23,13 +23,13 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    
+
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg dark-bg">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">Adopt Me</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -44,7 +44,7 @@
                     </li>
 
                 </ul>
-                <span class="navbar-text text-muted">
+                <span class="navbar-text">
                     All you need is love… And life is better with a dog. Adopt.
                 </span>
             </div>
@@ -60,20 +60,20 @@
     </main>
 
     <!-- Footer -->
-<div class="container-fluid my-5">
+<!-- <div class="container-fluid my-5"> -->
 
-    <footer class="text-center text-lg-start bg-dark">
+    <footer class="text-center text-lg-start dark-bg">
       <div class="container d-flex justify-content-center py-5">
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #ff95d6;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;">
           <i class="fab fa-facebook-f"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #ff95d6;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;">
           <i class="fab fa-youtube"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #ff95d6;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;">
           <i class="fab fa-instagram"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #ff95d6;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;">
           <i class="fab fa-twitter"></i>
         </button>
       </div>
@@ -86,7 +86,7 @@
       <!-- Copyright -->
     </footer>
     
-  </div>
+  <!-- </div> -->
   <!-- End of .container -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
