--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,3 +54,18 @@ body {
 .btn-primary:hover {
     color: #DDB892;
 }
+
+.ad-container {
+    display: flex;
+}
+
+.ad-content {
+    width: 50%;
+    margin: 5% 5%; 
+}
+
+.ad-img {
+    width: 50%;
+    height: 300px;
+    margin: 5% 5%; 
+}
