--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -69,3 +69,21 @@ body {
     height: 300px;
     margin: 5% 5%; 
 }
+
+.login-text {
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+.btn-login {
+    font-size: 1.3rem;
+    font-weight: 800;
+}
+
+.btn-login:hover {
+    color:#7F5539;
+}
+
+.text-end {
+    color:#445261;
+}
