--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 {% url 'home' as home_url %}
+{% url 'create_ad' as create_url %}
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
@@ -48,6 +49,9 @@
                     {% if user.is_authenticated %}
 <li class="nav-item">
 	<a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link {% if request.path == create_url %}active{% endif %}" aria-current="page" href="{% url 'create_ad' %}">Create Advert</a>
 </li>
 {% else %}
 <li class="nav-item">
