--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -28,6 +28,10 @@
     <p class="card-text">Contact Number:
         {{ advert.phone | safe }}
     </p>
+    {% if user.is_authenticated and advert.user == user %}
+  <button class="btn btn-edit"
+    ad_id="{{ ad.id }}">Edit</button>
+  {% endif %}
 </div>
 </div>
 
