--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
 
 <!-- index.html content starts here -->
@@ -16,10 +18,19 @@
                             <a href="{% url 'ad_detail' ad.id %}" class="ad-link">
                                 <h2 class="card-title">{{ ad.title }}</h2>
                             </a>
+                            <div class="image-container">
+                                {% if "placeholder" in post.featured_image.url %}
+                                <img class="card-img-top" src="{% static 'images/default.jpg' %}"
+                                  alt="placeholder image">
+                                {% else %}
+                                <img class="card-img-top" src=" {{ post.featured_image.url }}"
+                                  alt="{{ post.title }}">
+                                {% endif %}
                             <p class="card-text text-muted h6">{{ ad.created_on}}
                             </p>
                             <p class="card-text">{{ ad.excerpt }}
                             </p>
+                            </div>
                         </div>
                     </div>
                 </div>
