--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -19,11 +19,11 @@
                                 <h2 class="card-title">{{ ad.title }}</h2>
                             </a>
                             <div class="image-container">
-                                {% if "placeholder" in advert.featured_image.url %}
+                                {% if "placeholder" in advert.image.url %}
                                 <img class="card-img-top" src="#"
                                   alt="placeholder image">
                                 {% else %}
-                                <img class="card-img-top" src=" {{ ad.featured_image.url }}"
+                                <img class="card-img-top" src=" {{ ad.image.url }}"
                                   alt="{{ ad.title }}">
                                 {% endif %}
                             <p class="card-text text-muted h6">{{ ad.created_on}}
