remove image src for future updating

--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -23,7 +23,7 @@
                                 <img class="card-img-top" src="#"
                                   alt="placeholder image">
                                 {% else %}
-                                <img class="card-img-top" src=" {{ ad.image.url }}"
+                                <img class="card-img-top" src="#"
                                   alt="{{ ad.title }}">
                                 {% endif %}
                             <p class="card-text text-muted h6">{{ ad.created_on}}
