--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -3,7 +3,7 @@
 
 <div class="ad-container">
     <div class="ad-img">
-    <img src="{{ ad.image.url }}" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
+    <img src="#" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
     </div>
     <div class="ad-content">
     <h1 class="post-title">{{ advert.title }}</h1>
