--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,11 +38,18 @@ body {
 }
 
 .ad-link:hover,
-.page-link {
+.page-link,
+.btn-edit, 
+.btn-delete
+{
     color: #9C6644;
 }
 
-.page-link:hover {
+.page-link:hover,
+.btn-edit:hover, 
+.btn-delete:hover
+
+{
     background-color: #7F5539;
     color: #DDB892;
 }
