change style of navbar to remove responsiveness errors

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,15 +15,13 @@ body {
     color: #ffffff;
 }
 
-.brand:hover {
-    color: #DDB892;
-}
-
 .navbar-text, .nav-link {
     color: #ffffff;
 }
 
-.nav-link:hover {
+.brand:hover,
+.nav-link:hover
+{
     color: #DDB892;
 }
 
