--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -19,7 +19,9 @@
                                 <h2 class="card-title">{{ ad.title }}</h2>
                             </a>
                             <div class="image-container">
+                                {% if ad.image %}
                                 <img class="card-img-top" src="{{ ad.image.url }}">
+                                {% endif %}
                             <p class="card-text text-muted h6">{{ ad.created_on}}
                             </p>
                             <p class="card-text">{{ ad.excerpt }}
