--- a/ads/templates/ads/delete_ad.html
+++ b/ads/templates/ads/delete_ad.html
@@ -7,7 +7,7 @@
         <div class="card-body">
             <h3>Delete Your Advert</h3>
             <!-- Create a Form -->
-            <form method="POST"  style="margin-top: 1.3em;">
+            <form method="POST"  style="margin-top: 1.3em;" enctype="multipart/form-data">
                 <!-- Security token by Django -->
                 {% csrf_token %}
         
