--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -3,7 +3,7 @@
 
 <div class="ad-container">
     <div class="ad-img">
-        {% if advert.image.url %}
+        {% if advert.image %}
     <img src="{{ advert.image.url }}" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
     {% endif %}
     </div>
