--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
 <head>
     <title>Adopt Me</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Google Fonts CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -120,7 +120,7 @@
       <!-- Copyright -->
       <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
         © 2024 Copyright:
-        <p class="text-white" href="https://mdbootstrap.com/">Erin Cunningham</p>
+        <p class="text-white">Erin Cunningham</p>
       </div>
       <!-- Copyright -->
     </footer>
