--- a/ads/templates/ads/delete_ad.html
+++ b/ads/templates/ads/delete_ad.html
@@ -12,7 +12,7 @@
                 {% csrf_token %}
         
                 Are you want to delete this item ?
-            <input type="submit" value="Yes" />
+            <input type="submit" value="Yes">
             <a href="/">Cancel</a>
             </form>
         </div>
