--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -19,7 +19,7 @@
                                 </a>
                                 <div class="image-container">
                                     {% if ad.image %}
-                                    <img class="card-img-top" src="{{ ad.image.url }}">
+                                    <img class="card-img-top" src="{{ ad.image.url }}" alt="advert image of dog">
                                     {% endif %}
                                 <p class="card-text text-muted h6">{{ ad.created_on}}
                                 </p>
