--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,17 +36,11 @@ body {
 }
 
 .ad-link:hover,
-.page-link,
-.btn-edit, 
-.btn-delete
-{
+.page-link {
     color: #9C6644;
 }
 
-.page-link:hover,
-.btn-edit:hover, 
-.btn-delete:hover
-
+.page-link:hover
 {
     background-color: #7F5539;
     color: #DDB892;
