--- a/templates/base.html
+++ b/templates/base.html
@@ -103,18 +103,18 @@
 
     <footer class="text-center text-lg-start dark-bg">
       <div class="container d-flex justify-content-center py-5">
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;">
+          <a href="https://r.search.yahoo.com/_ylt=Awr.jnnDv_VlIVQVs.gM34lQ;_ylu=Y29sbwNpcjIEcG9zAzEEdnRpZAMEc2VjA3Nj/RV=2/RE=1710633028/RO=10/RU=https%3a%2f%2fwww.facebook.com%2f/RK=2/RS=9zwDCjJlp_E6Geb9Bqs9vYqoOo0-" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;" aria-label="facebook link">
           <i class="fab fa-facebook-f"></i>
-        </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;">
+          </a>
+          <a href="https://r.search.yahoo.com/_ylt=Awr.nqoYwPVl5PYV2RoM34lQ;_ylu=Y29sbwNpcjIEcG9zAzEEdnRpZAMEc2VjA3Nj/RV=2/RE=1710633113/RO=10/RU=https%3a%2f%2fyoutube.com%2f/RK=2/RS=d9ysAHEf8iLJ5ogtIuQ16ucP480-" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;" aria-label="youtube link">
           <i class="fab fa-youtube"></i>
-        </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;">
+          </a>
+          <a href="https://r.search.yahoo.com/_ylt=Awr.nqpWwPVljf0VjgwM34lQ;_ylu=Y29sbwNpcjIEcG9zAzEEdnRpZAMEc2VjA3Nj/RV=2/RE=1710633174/RO=10/RU=https%3a%2f%2fwww.instagram.com%2f/RK=2/RS=Zj9TlnINTCf_TMdNyt7XFGyGL00-" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;" aria-label="instagram link">
           <i class="fab fa-instagram"></i>
-        </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;">
+          </a>
+          <a href="https://r.search.yahoo.com/_ylt=Awr.gjd4wPVlfoAVKukM34lQ;_ylu=Y29sbwNpcjIEcG9zAzEEdnRpZAMEc2VjA3Nj/RV=2/RE=1710633208/RO=10/RU=https%3a%2f%2fwww.twitter.com/RK=2/RS=uFiF1Crd8460fbTkf0gQBQxi4Ms-" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #7F5539;" aria-label="twitter link">
           <i class="fab fa-twitter"></i>
-        </button>
+          </a>
       </div>
   
       <!-- Copyright -->
