--- a/ads/templates/ads/index.html
+++ b/ads/templates/ads/index.html
@@ -21,7 +21,7 @@
                                     {% if ad.image %}
                                     <img class="card-img-top" src="{{ ad.image.url }}" alt="advert image of dog">
                                     {% endif %}
-                                <p class="card-text text-muted h6">{{ ad.created_on}}
+                                <p class="card-text h6">{{ ad.created_on}}
                                 </p>
                                 <p class="card-text">{{ ad.excerpt }}
                                 </p>
