--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-dark dark-bg" style="background-color: #b08968;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand" style="color: #ffffff";>Adopt Me</span></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><span class="brand" style="color: #ffffff" >Adopt Me</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
